--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
+        </dependency>
 
     </dependencies>
 
